# rust-discord-bot

./: .gitignore  Cargo.toml  wrangler.toml
bot_commands/: Cargo.toml
bot_commands/src/: lib.rs
command_builder/: Cargo.toml
command_builder/src/: lib.rs
command_builder/tests/: command.rs
register/: Cargo.toml
register/src/: main.rs
src/: discord.rs  lib.rs
